fixed image shrinking on mobile issues

--- a/src/app/components/Line page templates/linespages.css
+++ b/src/app/components/Line page templates/linespages.css
@@ -195,6 +195,12 @@
   }
   .lineImage{
     position: relative;
+    width: 100%;
+    height:auto;
+  }
+
+  .xs-cell{
+    flex-shrink:0;
   }
 }
 
